Minor thread.getId() replacement, Nullable annotations
Signed-off-by: Byron Marohn <Combustible@live.com>